2007-07-14  Detlef Reichl

	* extconf.rb: Accept the srcdir includes spaces.

2007-07-13  Guillaume Cottenceau

	* src/rbatkobject.c: replace RTEST uses by RVAL2CBOOL
	
2007-07-08  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/*.c: use rb_block_proc directly instead of using G_BLOCK_PROC().

2007-06-16  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbatkeditabletext.c: fix to compile on ruby 1.9
	  RSTRING(v)->len -> RSTRING_LEN(v).

	* src/rbatkdocument.c: Define Atk::Document#locale only when Atk is 1.12 or later.
	Earlier version of Atk doesn't have atk_document_get_locale(),
	although it's not listed at <http://developer.gnome.org/doc/API/2.0/atk/ix07.html>.

2006-12-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Work MinGW again.

2006-11-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbatkdocument.c: Added Atk::Document#get_attribute_value, #[]
	#set_attribute_value, #[]=, #attributes for ATK+-1.12.
	Added #locale.
	* src/rbatkcomponent.c: Added Atk::Component#alpha. for ATK+-1.12.

2006-05-26  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbatktext.c (rbatk_text_remove_selection): Fix to convert the
	third argument of rb_raise from VALUE to int.

2005-11-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Improved cygwin support. [bug #1315334]
	By Yaakov Selkowitz.

2005-10-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/makeversion.rb: Removed. Use make_version_header() of 
	Ruby/GLib.
	* extconf.rb: Follow above change.
	
2005-10-04  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Fix a linking error on Cygwin.

2005-09-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbatk.c: Renamed Atk::VERSION to Atk::BUILD_VERSION.
	Removed Atk::(MAJOR|MINOR|MICRO)_VERSION.

2005-09-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbatk.c: Added Atk::VERSION, Atk::(MAJOR|MINOR|MICRO)_VERSION.
	* src/rbatkutil.c: Added Atk::Util::KeyEventType, Atk.focus_object,
	.(add|remove)_key_event_listener, .focus_tracker_notify. 